--- a/index.html
+++ b/index.html
@@ -348,6 +348,11 @@
                     <div class="font-bold">
                         &copy; 2022 Loopstudios. All Rights Reserved
                     </div>
+                    <div class="font-light font-alata">
+                        Created and built by <a href="www.linkedin.com/in/
+                        hakeemquadri
+                        " class="font-bold">Hakeem Quadri</a>
+                    </div>
                 </div>
             </div>
         </div>
