Added twitter link

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         </div>
                         <!-- Icon 2 -->
                         <div class="h-8 group">
-                            <a href="#">
+                            <a href="https://twitter.com/kidqudzy">
 
                                 <img src="images/icon-twitter.svg" alt="" class="h-6">
                             </a>
